[gd_scene load_steps=5 format=3 uid="uid://tg2l0q4to2pk"]

[ext_resource type="Script" path="res://game_scenes/03_shop/shop.gd" id="1_2k8su"]
[ext_resource type="PackedScene" uid="uid://dne47q8u5if22" path="res://game_scenes/shared_nodes/item_display.tscn" id="1_naxsf"]
[ext_resource type="Texture2D" uid="uid://p1dyj23bf1a8" path="res://assets/kenney/button_brown.png" id="2_0o0qk"]
[ext_resource type="PackedScene" uid="uid://4f3hwjrkf0my" path="res://game_scenes/03_shop/vert_prompt.tscn" id="3_5dhdj"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k8su")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -320.0
grow_horizontal = 2
grow_vertical = 0

[node name="ItemList" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="None" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2

[node name="Milk" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 9

[node name="Jars" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 6

[node name="Honey" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 1

[node name="Mint" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 2

[node name="Saffron" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 3

[node name="Pomegranate" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 4

[node name="Walnuts" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
layout_mode = 2
item = 5

[node name="PotUpgrade" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
visible = false
layout_mode = 2
item = 7

[node name="SpoonUpgrade" parent="VBoxContainer/ItemList" instance=ExtResource("1_naxsf")]
unique_name_in_owner = true
visible = false
layout_mode = 2
item = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 8

[node name="Info" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="BuyButton" parent="VBoxContainer/MarginContainer/Info" instance=ExtResource("3_5dhdj")]
unique_name_in_owner = true
layout_mode = 2
text = "Buy"
state = 0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer/Info"]
custom_minimum_size = Vector2(640, 180)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_0o0qk")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/Info/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ItemDesc" type="Label" parent="VBoxContainer/MarginContainer/Info/NinePatchRect/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Milk
10 Gold
It's WHat's For Dinner. If you're drinking milk for dinner, that is."
autowrap_mode = 3

[node name="VertPrompt2" parent="VBoxContainer/MarginContainer/Info" instance=ExtResource("3_5dhdj")]
layout_mode = 2
text = "Next"
state = 1

[node name="NinePatchRect" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -349.0
offset_right = 5.0
offset_bottom = 73.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="MoneyLabel" type="Label" parent="NinePatchRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You have 20 á½€bolus."

[node name="Transition" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.12549, 0)
